# object-pool

./: .gitignore  LICENSE  README.md
src/: .gitignore  CMakeLists.txt  object-pool.cc  object-pool.hpp  object-pool_tests.cc
